syntax = "proto3";
package api.scan.v1;

import "api/scan/v1/definition.proto";

// The scan service, to find elements near or around a given position
service ScanService {
  // Provides the coordinate of the closest point on the map to the input
  rpc ProximalPoint(ScanRequest) returns (ScanPointResponse);

  // Returns the edge(s) associated to the closest point to the input coordinate
  rpc ProximalEdge(ScanRequest) returns (ScanEdgeResponse);

  // Provides the closest coordinate upon the map to the input, which is interpolated.
  // In such that the input position may exist between edges on the graph, and therefore
  // is considered a "virtual" or "snapped" point.
  rpc ProximalPointSnapped(ScanSnappedRequest) returns (ScanPointSnappedResponse);

}
